# trade.xyz

./: AGENTS.md  README.md
V2/: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js
V2/config/: dry-run.example.toml  local.example.toml
V2/docs/: README.md  architecture.md  configuration.md  copy-health-monitor-robustness-fix.md  development-plan.md  execution-worker-model.md  fib-basic-module-audit-2026-06-03.md  fibonacci-basic-ux.md  fibonacci-long-short-extension.md  fibonacci-retracement-development.md  frontend-console.md  implementation-roadmap.md  internal-apis.md  low-latency-execution.md  official-compliance-audit-2026-06-03.md  product-requirements.md  risk-model.md  security-and-operations.md  security-and-secrets.md  smart-money-copy-account-coin-conflict-arbitration.md  smart-money-copy-development.md  smart-money-copy-downtime-backfill-fix.md  smart-money-copy-flip-follow-checklist.md  smart-money-copy-flip-follow-fix.md  smart-money-copy-latency-and-attribution-optimization.md  smart-money-copy-partial-close-ledger-fix.md  smart-money-copy-preflight-checklist.md  smart-money-copy-reduce-only-effective-min-fix.md  smart-money-copy-ultimate-ops.md  smart-money-copy-uncovered-position-recovery-checklist.md  smart-money-copy-uncovered-position-recovery-fix.md  smart-money-copy-websocket-submit-fail-closed-fix.md  smart-money-copy-zero-to-open-fix.md  tech-stack.md  testing-and-acceptance.md  testing.md
V2/frontend/: index.html
V2/scripts/: copy-health-monitor.ps1  run-persistent-live-soak.ps1
(+67 files in other folders)
